# Toolint

./: .gitignore  README.md  pyproject.toml
agentlint/: __init__.py  __main__.py  engine.py  formatters.py
agentlint/core/: config.py  models.py
agentlint/rules/: __init__.py  dependency.py  pyproject_rules.py  registry.py  structure.py
tests/: test_design_rules.py  test_engine.py  test_layer_separation.py  test_rules.py
toolint/: __main__.py  engine.py
toolint/core/: context.py
toolint/rules/: dependency.py  layer_separation.py  pyproject_rules.py  registry.py  schema_quality.py  structure.py
